# wags-tails-rs

./: Cargo.toml
src/: main.rs
src/providers/: chembl.rs  data_provider.rs  drugsatfda.rs  hgnc.rs  mod.rs  oncotree.rs
src/utils/: download.rs  mod.rs  storage.rs  versioning.rs
