[package]
name = "wags-tails"
description = "Technology-Assisted Information Loading and Structure (TAILS) for Wagnerds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
